--- a/views/header_.ejs
+++ b/views/header_.ejs
@@ -3,12 +3,10 @@
 <head>
 	<title> Locanor  </title>
 	<link rel="SHORTCUT ICON" href="/images/favicon.ico" />
-
+  <meta name="viewport" content="width=device-width"/>
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-
-
-	<script src="/dist/js/bootstrap-table.js"></script>
+	<script src="bootstrap-table.js"></script>
 	<link rel="stylesheet" href="bootstrap-table.css">
 
 	<style>
@@ -129,5 +127,6 @@
 
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
+		<br><br>
 	</nav>
 <!--#######-.-.-.-.-.-FIN NAV BAR -.-.-.-.-######################################################-->
