--- a/views/chercher_vehicule_resp.ejs
+++ b/views/chercher_vehicule_resp.ejs
@@ -97,6 +97,10 @@
       .tt-suggestion p {
       margin: 0;
       }
+      .modal-backdrop{
+        bottom: 0;
+        position: fixed;
+      }
     </style>
   </head>
 
