--- a/views/f44.ejs
+++ b/views/f44.ejs
@@ -111,6 +111,10 @@
       .tt-suggestion p {
       margin: 0;
       }
+      .modal-backdrop{
+        bottom: 0;
+        position: fixed;
+      }
     </style>
   </head>
 
