--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -25,53 +25,12 @@
 
 
 <div class="container">
+<div class="row vertical-align">
 	<div class="text-center">
-		<h1><span class="fa fa-road"></span> Liste véhicules</h1>
+		<h1><span class="fa fa-home"></span> Bienvenue, <%=user.username%></h1>
 		<br>
   </div>
-
-	<table  class = "table table-hover table-bordered text-center" id="myTable">
-
-		<div class="text-center">
-			<thead>
-			<tr>
-			<th>MVA</th>
-			<th>Immatriculation</th>
-			<th>Lieu actuel</th>
-			<th>Statut</th>
-			<th>Station départ</th>
-			<th>Station retour</th>
-			<th>Date départ</th>
-			<th>Date retour</th>
-			<th>Numéro contrat</th>
-			<th>Marque</th>
-			<th>Libellé modèle</th>
-
-
-			</tr>
-		</thead>
-	<tbody>
-	</div>
-		<% rowsv.forEach(function(vehicules){ %>
-			<tr id=<%=vehicules.IMMAT%> >
-
-				<td> <%=vehicules.MVA%> </td>
-				<td> <%=vehicules.IMMAT%></td>
-				<td> <%=vehicules.CURRENT_LOCATION_STN%></td>
-				<td> <%=vehicules.STATUT%></td>
-				<td> <%=vehicules.STATION_DEPART%></td>
-				<td> <%=vehicules.STATION_RETOUR%></td>
-				<td> <%=vehicules.DATE_DEPART%></td>
-				<td> <%=vehicules.DATE_RETOUR%></td>
-				<td> <%=vehicules.NUMERO_CONTRAT%></td>
-				<td> <%=vehicules.marque%></td>
-				<td> <%=vehicules.libell_mod_le%></td>
-			</tr>
-			<%})%>
-		</tbody>
-	</table>
-
-
+</div>
 
 </div>
 
