--- a/views/ajouter_parking.ejs
+++ b/views/ajouter_parking.ejs
@@ -12,7 +12,12 @@
   	<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
     <script  type="text/javascript" src="typeahead.min.js"></script>
-
+    <style type="text/css">
+      .modal-backdrop{
+        bottom: 0;
+        position: fixed;
+      }
+    </style>
     </head>
 
   <!--Body-->
