--- a/views/reception_vehicule.ejs
+++ b/views/reception_vehicule.ejs
@@ -28,7 +28,13 @@
 	</style>
 
 	<style>
-
+	input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0;
+}
 
 		.twitter-typeahead, .tt-hint { width: 100%; }
 		.tt-dropdown-menu {
