--- a/views/header0.ejs
+++ b/views/header0.ejs
@@ -67,9 +67,12 @@
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><h3> <span class="glyphicon glyphicon-refresh"></span>  Process <span class="caret"></span></h3></a>
 					<ul class="dropdown-menu">
-						<li><a href="/f44"> Préparer </a></li>
-						<li role="separator" class="divider"></li>
 						<li><a href="/fvehicule"> Réception/Checkin </a></li>
+						<li role="separator" class="divider"></li>
+						<li><a href="/f44"> Préparer/F44 </a></li>
+						<li role="separator" class="divider"></li>
+						<li><a href="/f44"> Transfert </a></li>
+
 						<% if (user.attribut == "administrateur" || user.attribut == "opérateur") { %>
 						<li role="separator" class="divider"></li>
 						<li><a href="/tache_reception">Assigner une réception</a></li>
