--- a/views/parking.ejs
+++ b/views/parking.ejs
@@ -12,7 +12,7 @@
 <div class="container">
 <br>
 	<div class="text-center">
-		<h1><span class="fa fa-home"></span><b> Liste des Parking </b></h1>
+		<h1><span class="fa fa-home"></span><b> Parking/Client </b></h1>
 	</div>
   <br><br>
   <table  class = "table table-hover table-bordered text-center">
