--- a/views/f44.ejs
+++ b/views/f44.ejs
@@ -149,7 +149,7 @@
         </div>
 
         <div class="form-group">
-          <input type="number" class="typeahead form-control" id="mva" name="MVA" placeholder="MVA"  required>
+          <input type="text" pattern="[0-9]*" class="typeahead form-control" id="mva" name="MVA" placeholder="MVA"  required>
         </div>
 
         <div class="form-group">
