--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -11,13 +11,10 @@
 	</head>
 
 <div class="container">
-
-<div class="row vertical-align">
-	<div class="">
+	<div class="text-center">
 		<h1><span class="fa fa-home"></span> Bienvenue, <%=user.username%></h1>
 		<br>
   	</div>
-</div>
 </div>
 
 </body>
