--- a/views/reception_vehicule.ejs
+++ b/views/reception_vehicule.ejs
@@ -213,7 +213,7 @@ submitForms = function(){
 							<input type="text" id='myimmat' name="immat" class="typeahead form-control" placeholder="Immat" onFocus="updMVA()" />
 						</div>
   					<div class="form-group">
-  						<input type="number" class="form-control" id="mva" name="mva" placeholder="MVA" required>
+  						<input type="text" pattern="[0-9]*" class="form-control" id="mva" name="mva" placeholder="MVA" required>
   					</div>
   					<div class="form-group">
   						<input type="text" class="form-control" id="proprietaire" name="proprietaire" placeholder="Propriétaire" required>
@@ -228,10 +228,10 @@ submitForms = function(){
 							<input type="text" class="form-control" id="statutagence" name="statutagence" placeholder="Statut Agence" required>
 						</div>
             <div class="form-group">
-              <input type="number" class="form-control" id="num_contrat" name="num_contrat" placeholder="Numéro Contrat">
+              <input type="text" pattern="[0-9]*" class="form-control" id="num_contrat" name="num_contrat" placeholder="Numéro Contrat">
             </div>
             <div class="form-group">
-              <input type="number" class="form-control" id="km" name="km" placeholder="Km" required>
+              <input type="text" pattern="[0-9]*" class="form-control" id="km" name="km" placeholder="Km" required>
             </div>
 
 
