--- a/views/transfert_vehicule.ejs
+++ b/views/transfert_vehicule.ejs
@@ -19,11 +19,14 @@
 			<th> MVA</th>
 			<th> Immatriculation</th>
 			<th> Lieu actuel</th>
+			<th> Position</th>
 			<th> Statut</th>
 			<th> Station départ</th>
 			<th> Station retour</th>
 			<th> Date départ</th>
 			<th> Date retour</th>
+			<th> Nom Agence</th>
+			<th> Agence retour</th>
 			<th> Numéro contrat</th>
 			<th> Marque</th>
 			<th> Libellé modèle</th>
@@ -35,11 +38,14 @@
 				<td> <%=vehicules.MVA%> </td>
 				<td> <%=vehicules.IMMAT%></td>
 				<td> <%=vehicules.CURRENT_LOCATION_STN%></td>
+				<td> <%=vehicules.position%></td>
 				<td> <%=vehicules.STATUT%></td>
 				<td> <%=vehicules.STATION_DEPART%></td>
 				<td> <%=vehicules.STATION_RETOUR%></td>
 				<td> <%=vehicules.DATE_DEPART%></td>
 				<td> <%=vehicules.DATE_RETOUR%></td>
+				<td> <%=vehicules.nom_agence%></td>
+				<td> <%=vehicules.Agence_retour%></td>
 				<td> <%=vehicules.NUMERO_CONTRAT%></td>
 				<td> <%=vehicules.marque%></td>
 				<td> <%=vehicules.libell_mod_le%></td>
