--- a/views/chercher_agence_resp.ejs
+++ b/views/chercher_agence_resp.ejs
@@ -97,6 +97,10 @@
       .tt-suggestion p {
       margin: 0;
       }
+      .modal-backdrop{
+        bottom: 0;
+        position: fixed;
+      }
     </style>
   </head>
 
@@ -169,7 +173,7 @@
   </div>
     <div class="modal-footer ">
     <button type="button" class="btn btn-success" onclick='modif()' ><span class="glyphicon glyphicon-ok-sign" ></span> Confirmer </button>
-    <button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Vérifier </button>
+    <button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Annuler </button>
   </div>
   </div>
 <!-- /.modal-content -->
