--- a/views/chercher_parking.ejs
+++ b/views/chercher_parking.ejs
@@ -94,6 +94,10 @@
       .tt-suggestion p {
       margin: 0;
       }
+      .modal-backdrop{
+        bottom: 0;
+        position: fixed;
+      }
     </style>
   </head>
 
