new buttons in profile/admin

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -17,5 +17,51 @@
   	</div>
 </div>
 
+
+<div class="row vertical-align">
+
+<div class="text-center">
+
+ <!-- Single button -->
+<div class="btn-group">
+  <button type="button" class="btn btn-default btn-lg dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <span class="fa fa-road"></span>  Véhicule <span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu">
+    <li><a href="#">Liste des véhicules</a></li>
+    <li role="separator" class="divider"></li>
+    <li><a href="#">Récupérer</a></li>
+    <li role="separator" class="divider"></li>
+    <li><a href="#">Transférer</a></li>
+    <li role="separator" class="divider"></li>
+    <li><a href="#">A préparer</a></li>
+    <li role="separator" class="divider"></li>
+    <li><a href="#">Chercher</a></li>
+
+  </ul>
+</div>
+
+ <!-- Single button -->
+<div class="btn-group">
+  <button type="button" class="btn btn-default btn-lg dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <span class="fa fa-refresh"></span>  Process <span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu">
+    <li><a href="#">Réception/Checkin</a></li>
+    <li role="separator" class="divider"></li>
+    <li><a href="#">Préparer</a></li>
+    <li role="separator" class="divider"></li>
+    <li><a href="#">Assigner une réception</a></li>
+    <li role="separator" class="divider"></li>
+    <li><a href="#">Tâche assignées</a></li>
+
+  </ul>
+</div>
+
+</div>
+</div>
+
+
+
 </body>
 </html>
