change utilisateur to preparateur

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -47,7 +47,7 @@
 				  <option value="0" selected>Choisir type de privilège</option>
 					<option value="administrateur">Administrateur</option>
 					<option value="opérateur">Opérateur</option>
-					<option value="utilisateur">Utilisateur</option>
+					<option value="préparateur">Préparateur</option>
 			</select>
 			<br>
 			<select name="agence" class="form-control select select-primary" data-toggle="select">
