--- a/views/chercher_parking_resp.ejs
+++ b/views/chercher_parking_resp.ejs
@@ -181,7 +181,7 @@
 </div>
   <!-- /.modal-dialog -->
 </div>
-
+<button type="button" class="btn btn-danger pull-right" onclick='suppr()'>Supprimer</button>
 </div>
 
             <script>
@@ -202,7 +202,27 @@
         });
         };
         </script>
+        <script>
+            function suppr(){
+              var l = confirm("Veuillez valider la suppression") ;
+              if (l)
+                {
+                  $.ajax({
+                    url: 'http://localhost:8080/supprimer_parking',
+                    data : {
+                      id : $( '#id' ).html()
+                      },
 
+                    success : function (data)
+                      {
+                        $(location).attr('href','/confirmation');
+                        console.log(data)
+                      }
+
+                  });
+                }
+              };
+        </script>
 
 
     <script src="docs/js/highlight.js"></script>
