--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -28,15 +28,15 @@
     <span class="fa fa-road"></span>  Véhicule <span class="caret"></span>
   </button>
   <ul class="dropdown-menu">
-    <li><a href="#">Liste des véhicules</a></li>
+    <li><a href="/liste_vehicules">Liste des véhicules</a></li>
     <li role="separator" class="divider"></li>
-    <li><a href="#">Récupérer</a></li>
+    <li><a href="/recuperervehicule">Récupérer</a></li>
     <li role="separator" class="divider"></li>
-    <li><a href="#">Transférer</a></li>
+    <li><a href="/transfertvehicule">Transférer</a></li>
     <li role="separator" class="divider"></li>
-    <li><a href="#">A préparer</a></li>
+    <li><a href="/preparevehicule">A préparer</a></li>
     <li role="separator" class="divider"></li>
-    <li><a href="#">Chercher</a></li>
+    <li><a href="/chercher_vehicule">Chercher</a></li>
 
   </ul>
 </div>
@@ -47,11 +47,13 @@
     <span class="fa fa-refresh"></span>  Process <span class="caret"></span>
   </button>
   <ul class="dropdown-menu">
-    <li><a href="#">Réception/Checkin</a></li>
+    <li><a href="/fvehicule">Réception/Checkin</a></li>
     <li role="separator" class="divider"></li>
-    <li><a href="#">Préparer</a></li>
-    <li role="separator" class="divider"></li>
-    <li><a href="#">Assigner une réception</a></li>
+    <li><a href="/f44">Préparer</a></li>
+    <% if (user.attribut == "administrateur" || user.attribut == "opérateur") { %>
+	<li role="separator" class="divider"></li>
+	<li><a href="/tache_reception">Assigner une réception</a></li>
+	<% } %>
     <li role="separator" class="divider"></li>
     <li><a href="#">Tâche assignées</a></li>
 
@@ -60,7 +62,6 @@
 
 </div>
 </div>
-
 
 
 </body>
