--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,8 +11,11 @@
 		body{
 			padding-top:80px;
 			background-attachment: fixed;
-			background-size:100% auto;
 			background-image:url(/images/accueil_background_flou.jpg);
+            background-repeat: no-repeat;
+            -webkit-background-size: cover;
+            background-position: center center;
+
 
 		}
 	</style>
@@ -22,16 +25,17 @@
         <div class="col-sm-6 col-sm-offset-3">
             <h1><span class="fa fa-sign-in"></span> Connection</h1>
 
-            <!-- show any messages that come back with authentication -->
+           <!-- show any messages that come back with authentication -->
             <% if (message.length > 0) { %>
                 <div class="alert alert-danger"><%= message %></div>
             <% } %>
+
 
             <!-- LOGIN FORM -->
             <form action="/login" method="post">
                 <div class="form-group">
                     <label>Identifiant</label>
-                    <input type="text" class="form-control" name="username">
+                    <input type="text" class="form-control" name="username" required>
                 </div>
                 <div class="form-group">
                     <label>Mot de Passe</label>
