--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -25,32 +25,38 @@
 
 	<h1><span class="fa fa-sign-in"></span> Créer Compte</h1>
 
-	<!-- show any messages that come back with authentication -->
-	<% if (message.length > 0) { %>
-		<div class="alert alert-danger"><%= message %></div>
-	<% } %>
+    <!-- show any messages that come back with authentication -->
+    <% if (message.length > 0 && (message[0].indexOf("ECHEC") > -1)) { %>
+        <div class="alert alert-danger"><%= message %></div>
+    <% } %>
+
+    <!-- show any messages that come back with authentication -->
+    <% if (message.length > 0 && (message[0].indexOf("SUCCES") > -1)) { %>
+        <div class="alert alert-success"><%= message %></div>
+    <% } %>
+
 
 	<!-- LOGIN FORM -->
 	<form action="/signup" method="post">
 		<div class="form-group">
 			<label>Identifiant</label>
-			<input type="text" class="form-control" name="username">
+			<input type="text" class="form-control" name="username" required>
 		</div>
 		<div class="form-group">
 			<label>Mot de passe</label>
-			<input type="password" class="form -control" name="password">
+			<input type="password" class="form -control" name="password" required>
 		</div>
 
 		<div class="form-group">
 
-			<select name="attribut" class="form-control select select-primary" data-toggle="select">
+			<select name="attribut" class="form-control select select-primary" data-toggle="select" required>
 				  <option value="0" selected>Choisir type de privilège</option>
 					<option value="administrateur">Administrateur</option>
 					<option value="opérateur">Opérateur</option>
 					<option value="préparateur">Préparateur</option>
 			</select>
 			<br>
-			<select name="agence" class="form-control select select-primary" data-toggle="select">
+			<select name="agence" class="form-control select select-primary" data-toggle="select" required>
 				  	<option value="0" selected>Choisir l'agence de résidence</option>
 				  	<% agence.forEach(function(agence){ %>
 					<option value=<%=agence.nom%>><%=agence.nom%></option>
