--- a/views/reception_vehicule.ejs
+++ b/views/reception_vehicule.ejs
@@ -250,7 +250,7 @@ input[type=number]::-webkit-outer-spin-button {
           </div>
             <div class="modal-footer ">
             <button type="submit" class="btn btn-success" onclick="submitForms()" ><span class="glyphicon glyphicon-ok-sign"></span> Confirmer </button>
-            <button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Vérifier </button>
+            <button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Annuler </button>
           </div>
           </div>
         <!-- /.modal-content -->
