--- a/views/f44.ejs
+++ b/views/f44.ejs
@@ -238,7 +238,7 @@
           </div>
             <div class="modal-footer ">
             <button type="submit" class="btn btn-success" ><span class="glyphicon glyphicon-ok-sign"></span> Confirmer </button>
-            <button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Vérifier </button>
+            <button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Annuler </button>
           </div>
           </div>
         <!-- /.modal-content -->
