--- a/views/tache_reception.ejs
+++ b/views/tache_reception.ejs
@@ -223,16 +223,16 @@
         <div class="modal-content">
               <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
-            <h4 class="modal-title custom_align" id="Heading"> Confirmer cette entrée </h4>
+            <h4 class="modal-title custom_align" id="Heading">Confirmer cette entrée </h4>
           </div>
             <div class="modal-body">
 
            <div class="alert alert-danger"><span class="glyphicon glyphicon-warning-sign"></span> Merci de confirmer votre saisie </div>
 
           </div>
-            <div class="modal-footer ">
+            <div class="modal-footer">
             <button type="submit" class="btn btn-success" ><span class="glyphicon glyphicon-ok-sign"></span> Confirmer </button>
-            <button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Vérifier </button>
+            <button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Annuler </button>
           </div>
           </div>
         <!-- /.modal-content -->
