nouvelle section gérer les utilisateurs

--- a/views/Confirmation.ejs
+++ b/views/Confirmation.ejs
@@ -7,7 +7,7 @@
 
   <div class="jumbotron" style="text-align:center;padding-top:20px;">
   <h1> Confirmé </h1>
-  <p> Votre modification a été prise en compte ! </p>
+  <p> Votre saisie a été prise en compte ! </p>
 </div>
 
 <script language="javascript" type="text/javascript">
