--- a/views/ajouter_parking.ejs
+++ b/views/ajouter_parking.ejs
@@ -127,12 +127,12 @@
   	</div>
   			<tr >
   				<td ><div contenteditable><span id = 'nom'> NOM </span> </div></td>
-  				<td><input type="text" id='agence' name="agence" class="typeahead form-control" placeholder="Agence"/></td>
-
+  				<td><input type="text" id='agence' name="agence" class="typeahead form-control" placeholder="Agence"/>
+          </td>
   			</tr>
   	</table>
 
-<p data-toggle="tooltip" title="su"><button type="button" class="btn btn-warning pull-right"data-toggle="modal" data-target="#delete">Ajouter</button></p>
+        <p data-toggle="tooltip" title="su"><button type="button" class="btn btn-warning pull-right"data-toggle="modal" data-target="#delete">Ajouter</button></p>
 
 <div class="modal fade" id="delete" tabindex="-1" role="dialog" aria-labelledby="edit" aria-hidden="true">
   <div class="modal-dialog">
@@ -146,7 +146,7 @@
    <div class="alert alert-danger"><span class="glyphicon glyphicon-warning-sign"></span> Merci de confirmer votre saisie </div>
 
   </div>
-    <div class="modal-footer ">
+    <div class="modal-footer">
     <button type="button" class="btn btn-success" onclick='ajout()' ><span class="glyphicon glyphicon-ok-sign" ></span> Confirmer </button>
     <button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Vérifier </button>
   </div>
