--- a/views/tache_reception.ejs
+++ b/views/tache_reception.ejs
@@ -203,6 +203,16 @@
           <input type="number" class="typeahead form-control" id="mva" name="MVA" placeholder="MVA"  required>
         </div>
 
+        <div class="form-group">
+                  <select name="tache" class="form-control select select-primary" data-toggle="select">
+                      <option value="0" selected>Choisir une tache</option>
+                    <option value="immatriculation">Immatriculation</option>
+                    <option value="ON MOVE">ON MOVE</option>
+                    <option value="REG">REG</option>
+                    <option value="MARSHALLED">MARSHALLED</option>
+                  </select>
+        </div>
+
         <div class='form-group'>
           <span class=" glyphicon glyphicon-calendar"></span> <input name="date" type="date" id="datepicker" placeholder="Date prévue">
         </div>
