--- a/views/header0.ejs
+++ b/views/header0.ejs
@@ -75,7 +75,7 @@
 						<li><a href="/tache_reception">Assigner une réception</a></li>
 						<% } %>
 						<li role="separator" class="divider"></li>
-						<li><a href="#"> Tâches assignées </a></li>
+						<li><a href="/tache_reception"> Tâches assignées </a></li>
 					</ul>
 				</li>
 
@@ -123,7 +123,7 @@
 							<% if (user.attribut == "administrateur") { %>
 							<li><a href="/admin/signup">Ajouter un utilisateur</a></li>
 							<li role="separator" class="divider"></li>
-							<li><a href="/update">Changer mot de passe</a></li>
+							<li><a href="/update">Gérer les utilisateurs</a></li>
 							<li role="separator" class="divider"></li>
 							<% } %>
 	            <li><a href="mailto:admin@email.fr">Contacter l'administrateur</a></li>
