--- a/views/reception_vehicule.ejs
+++ b/views/reception_vehicule.ejs
@@ -138,18 +138,23 @@ input[type=number]::-webkit-outer-spin-button {
 					</div>
 
       				<div class="form-group">
+      				     <label>Id:</label>
   						<input type="text" class="form-control" id="name" name="name" placeholder="Name" value=<%=user.username%> required>
   					</div>
 						<div class="form-group">
+						    <label>Immatriculation:</label>
 							<input type="text" id='myimmat' name="immat" class="typeahead form-control" placeholder="Immat" onFocus="updAUTO()" />
 						</div>
   					<div class="form-group">
+  					    <label>MVA:</label>
   						<input type="text" pattern="[0-9]*" class="form-control" id="mva" name="mva" placeholder="MVA" required>
   					</div>
   					<div class="form-group">
+  					    <label>Propriétaire:</label>
   						<input type="text" class="form-control" id="proprietaire" name="proprietaire" placeholder="Propriétaire" required>
   					</div>
 						<div class="form-group">
+						    <label>Modèle:</label>
 							<input type="text" class="form-control" id="modele" name="modele" placeholder="Modèle" required>
 						</div>
 						<div class="form-group">
@@ -163,21 +168,13 @@ input[type=number]::-webkit-outer-spin-button {
 									</select>
 
 						</div>
-						<div class="form-group">
 
-									<select name="statutagence" class="form-control select select-primary" data-toggle="select">
-				  						<option value="0" selected>Choisir un statut Agence</option>
-										<option value="a_localiser">A Localiser</option>
-										<option value="localisé">Localisé</option>
-										<option value="a_transferer">A Transférer</option>
-										<option value="transfert_en_cours">Transfert en cours</option>
-									</select>
-
-						</div>
             <div class="form-group">
+              <label>Id:</label>
               <input type="text" pattern="[0-9]*" class="form-control" id="num_contrat" name="num_contrat" placeholder="Numéro Contrat">
             </div>
             <div class="form-group">
+              <label>km:</label>
               <input type="text" pattern="[0-9]*" class="form-control" id="km" name="km" placeholder="Km" required>
             </div>
 
@@ -205,6 +202,11 @@ input[type=number]::-webkit-outer-spin-button {
 		</div>
 			<div class="tab-pane" id="step2">
 				<div class="form-area">
+						<div class="text-center">
+						<h2><span class="glyphicon glyphicon-refresh"></span> Définition des tâches/Statut</h2>
+						<br>
+
+						</div>
 						<br>
 						<select name="preparation" class="form-group form-control select select-primary" data-toggle="select" required>
 								<option value="0" selected>Statut Préparation</option>
@@ -230,7 +232,21 @@ input[type=number]::-webkit-outer-spin-button {
 								<option value="p1">P1</option>
 								<option value="p2">P2</option>
 								<option value="p3">P3</option>
-								<option value="p3">P3</option>
+								<option value="p3">P4</option>
+						</select>
+						<br>
+
+						<select name="position" class="form-group form-control select select-primary" data-toggle="select" required>
+								<option value="0" selected>Présence GPS</option>
+								<option value="no">Non</option>
+								<option value="yes">Oui</option>
+
+						</select>
+						<br>
+						<select name="position" class="form-group form-control select select-primary" data-toggle="select" required>
+								<option value="0" selected>Présence siège bébé</option>
+								<option value="no">Non</option>
+								<option value="yes">Oui</option>
 						</select>
 						<br>
 
