--- a/views/ajouter_agence.ejs
+++ b/views/ajouter_agence.ejs
@@ -73,7 +73,7 @@
         function ajout(){
 
         		$.ajax({
-        			url: 'http://localhost:8080/data_ajouter_agence',
+        			url: '/data_ajouter_agence',
         			data : {
         			nom : $( '#nom' ).html()
         				},
