--- a/views/ajouter_parking.ejs
+++ b/views/ajouter_parking.ejs
@@ -162,7 +162,7 @@
         function ajout(){
 
         		$.ajax({
-        			url: 'http://localhost:8080/data_ajouter_parking',
+        			url: '/data_ajouter_parking',
         			data : {
         			nom : $( '#nom' ).html(),
         			agence : $( '#agence' ).html()
