--- a/views/f44.ejs
+++ b/views/f44.ejs
@@ -141,18 +141,22 @@
         <br>
 
         <div class="form-group">
+          <label>Identifiant:</label>
           <input type="text" class="form-control" name="name" placeholder="Nom" value=<%=user.username%> required>
         </div>
 
         <div class="form-group">
+          <label>Immatriculation:</label>
           <input type="text" id='myimmat' name="immat" class="typeahead form-control" placeholder="Immat" onFocus="updMVA()" />
         </div>
 
         <div class="form-group">
+          <label>MVA:</label>
           <input type="text" pattern="[0-9]*" class="typeahead form-control" id="mva" name="MVA" placeholder="MVA"  required>
         </div>
 
         <div class="form-group">
+          <label>Remplissage carburant:</label>
           <input type="text"  name="remplissage_carburant" class="typeahead form-control" placeholder="Remplissage Carburant"  />
         </div>
 
